# levelmate

./: CMakeLists.txt  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: build-extension.mjs
src/: main.cpp
src/audio/: LevelMateProcessor.ts  loudness.test.ts  loudness.ts  presets.test.ts  presets.ts
src/demo/: index.html  main.ts  styles.css
src/extension/: manifest.json  messages.ts
src/extension/content/: content.ts
src/extension/popup/: popup.css  popup.html  popup.ts
tests/: main_tests.cpp
